Tue Nov 27 13:37:35 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/dblib/unittests/t0001.c src/dblib/unittests/t0022.c:
	- compile with Sybase libraries
	* src/dblib/unittests/t0008.c: more verbose

Mon Nov 26 21:02:57 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/array_out.c: fix silly core

Mon Nov 26 19:11:12 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* configure.ac include/tdsodbc.h src/odbc/odbc.c:
	* src/odbc/unittests/array_out.c src/odbc/unittests/common.h:
	* src/odbc/unittests/describecol.c src/odbc/unittests/freeclose.c:
	* src/odbc/unittests/insert_speed.c src/odbc/unittests/timeout.c:
	* src/odbc/unittests/timeout3.c src/odbc/unittests/type.c:
	- minor fixes for 64bit

Mon Nov 26 16:47:34 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* configure.ac src/apps/fisql/fisql.c:
	- do not use functions not availables

Mon Nov 26 09:43:03 EST 2007	JK Lowden <jklowden@freetds.org>
	* src/dblib/bcp.c src/tds/unittests/iconv_fread.c
	- small changes

Mon Nov 26 09:51:21 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/dblib/unittests/bcp.c: fix printf

Mon Nov 26 07:24:43 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/array.c src/odbc/unittests/array_out.c:
	* src/odbc/unittests/const_params.c src/odbc/unittests/cursor1.c:
	* src/odbc/unittests/describecol.c src/odbc/unittests/freeclose.c:
	* src/odbc/unittests/insert_speed.c src/odbc/unittests/raiserror.c:
	* src/odbc/unittests/rpc.c src/odbc/unittests/scroll.c:
	* src/tds/challenge.c:
	- fix minor issues with 64bit

Thu Nov 22 09:43:58 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* configure.ac src/ctlib/Makefile.am src/dblib/Makefile.am:
	* src/odbc/Makefile.am:
	- do not filter symbols under MacOsX (avoid libtool problems)

Wed Nov 21 11:31:37 EST 2007	JK Lowden <jklowden@freetds.org>
	* src/ctlib/blk.c: correctly test result of cs_convert
	* src/dblib/rpc.c: minor edits